Tuesday morning updates to stylesheet and html

--- a/style.css
+++ b/style.css
@@ -10,15 +10,42 @@ body
 
 h1
 {
-    color: cyan;
+    color: rgb(60, 255, 0);
+    text-transform: uppercase;
+}
+p
+{
+
+
+}
+
+#my-photo
+{
+
+
+}
+.links
+{
+
+}
+
+.container
+{
+
 }
 
 .titles
 {
-    color: blue;
+    color: rgb(0, 225, 255);
 }
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     }
+.name
+{
+ colour:green
+}
+
+    
